[gd_scene load_steps=7 format=2]

[ext_resource path="res://TextureButton.gd" type="Script" id=1]
[ext_resource path="res://Textures/Map.jpg" type="Texture" id=2]
[ext_resource path="res://Textures/dot.png" type="Texture" id=3]
[ext_resource path="res://fonts/Type Machine.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Hiest select" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 1025.0
margin_bottom = 601.0
texture = ExtResource( 2 )
expand = true

[node name="BigBoiBank" type="TextureButton" parent="."]
margin_left = 284.0
margin_top = 220.0
margin_right = 294.0
margin_bottom = 230.0
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="BigBoiBank"]
margin_left = 2.0
margin_top = -14.0
margin_right = 79.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 1 )
text = "Big Boi Bank"

[node name="Button" type="Button" parent="."]
margin_left = 969.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Back"
flat = true

[node name="711" type="TextureButton" parent="."]
margin_left = 855.0
margin_top = 237.0
margin_right = 865.0
margin_bottom = 247.0
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="711"]
margin_left = 10.0
margin_top = -12.0
margin_right = 87.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 1 )
text = "7/11"

[connection signal="pressed" from="BigBoiBank" to="BigBoiBank" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Button" to="BigBoiBank" method="_on_Button_pressed"]
[connection signal="pressed" from="711" to="BigBoiBank" method="_on_711_pressed"]
